--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -57,35 +57,35 @@
       </div>
     </div>
   </nav>
-  <!-- <main>
-      <div class="image">
-        <img
-          id="desktop-image"
-          src="/images/image-hero-desktop.png"
-          alt="Hero Image"
-        />
-        <img
-          id="mobile-image"
-          src="/images/image-hero-mobile.png"
-          alt="Hero Image"
-        />
-      </div>
-      <div class="text">
-        <h1>Make remote work</h1>
-        <p>
-          Get your team in sync, no matter your location. Streamline processes,
-          create team rituals, and watch productivity soar.
-        </p>
-        <button>Learn more</button>
-      </div>
-    </main>
+  <main>
+    <div class="image">
+      <img id="desktop-image" src="/images/image-hero-desktop.png" alt="Hero Image" />
+      <img id="mobile-image" src="/images/image-hero-mobile.png" alt="Hero Image" />
+    </div>
+    <div class="text">
+      <h1 class="main-text">Make remote work</h1>
+      <p>
+        Get your team in sync, no matter your location. Streamline processes,
+        create team rituals, and watch productivity soar.
+      </p>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+    </div>
+    <div class="cta-button">
+      <button>Learn more</button>
+    </div>
+    <div class="client">
+      <img src="/images/client-audiophile.svg" alt="client Image">
+      <img src="/images/client-databiz.svg" alt="client Image">
+      <img src="/images/client-maker.svg" alt="client Image">
+      <img src="/images/client-meet.svg" alt="client Image">
+    </div>
+  </main>
+
+  <div class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+      href="#">Abhinav Kumar</a>.
+  </div>
 </body>
 
 </html>
