started making main part

--- a/Online Muri/index.html
+++ b/Online Muri/index.html
@@ -30,6 +30,16 @@
         </div>
     </nav>
     <hr>
+    <main>
+        <div id="left-side">
+            <img src="./assets/online_muri-img.png" alt="Hero Image">
+        </div>
+        <div id="right-side">
+            <div class="main-text">
+                <span class="primary">Puffed</span><span class="secondary">Rice</span>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
