completed the website

--- a/Online Muri/index.html
+++ b/Online Muri/index.html
@@ -36,10 +36,25 @@
         </div>
         <div id="right-side">
             <div class="main-text">
-                <span class="primary">Puffed</span><span class="secondary">Rice</span>
+                <span class="primary">Puffed</span>
+                <span class="secondary">Rice</span>
             </div>
+            <div class="disc-text">
+                <p>
+                    Everyone loves muri. Starting from a doctor, engineer, teacher, businessman, entrepreneur, daily
+                    wage
+                    workers, musician, farmer, builder, reporter, soldier and many more
+                </p>
+            </div>
+            <button>Choose Flavour</button>
         </div>
     </main>
+    <footer>
+        <p>Follow Us</p>
+        <img src="/assets/linkedin.svg" alt="">
+        <img src="/assets/instagram.svg" alt="">
+        <img src="/assets/twitter.svg" alt="">
+    </footer>
 </body>
 
 </html>
