--- a/Online Muri/index.html
+++ b/Online Muri/index.html
@@ -8,9 +8,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;700&display=swap" rel="stylesheet">
+   <!-- Primary Meta Tags -->
     <title>Online Muri</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <meta name="title" content="Online Muri">
+    <meta name="description" content="Everyone loves muri. Starting from a doctor, engineer, teacher, businessman, entrepreneur, daily wage workers, musician, farmer, builder, reporter, soldier and many more">
+
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Online Muri">
+    <meta property="og:description" content="Everyone loves muri. Starting from a doctor, engineer, teacher, businessman, entrepreneur, daily wage workers, musician, farmer, builder, reporter, soldier and many more">
+    <meta property="og:image" content="./assets/online_muri-img.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Online Muri">
+    <meta property="twitter:description" content="Everyone loves muri. Starting from a doctor, engineer, teacher, businessman, entrepreneur, daily wage workers, musician, farmer, builder, reporter, soldier and many more">
+    <meta property="twitter:image" content="./assets/online_muri-img.png">
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -18,9 +33,9 @@
         <div id="logo">
             <span class="primary">Online</span><span class="secondary">Muri</span>
         </div>
-        <img src="/assets/icon-menu.svg" alt="" class="open-menu" id="open">
+        <img src="./assets/icon-menu.svg" alt="" class="open-menu" id="open">
         <ul id="nav-items">
-            <img src="/assets/icon-close-menu.svg" alt="" class="close-menu" id="close">
+            <img src="./assets/icon-close-menu.svg" alt="" class="close-menu" id="close">
             <li>Home</li>
             <li>Process</li>
             <li>Flavours</li>
@@ -61,9 +76,9 @@
     </main>
     <footer>
         <p>Follow Us</p>
-        <img src="/assets/linkedin.svg" alt="">
-        <img src="/assets/instagram.svg" alt="">
-        <img src="/assets/twitter.svg" alt="">
+        <img src="./assets/linkedin.svg" alt="">
+        <img src="./assets/instagram.svg" alt="">
+        <img src="./assets/twitter.svg" alt="">
     </footer>
 </body>
 
