--- a/Online Muri/index.html
+++ b/Online Muri/index.html
@@ -17,13 +17,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Online Muri">
     <meta property="og:description" content="Everyone loves muri. Starting from a doctor, engineer, teacher, businessman, entrepreneur, daily wage workers, musician, farmer, builder, reporter, soldier and many more">
-    <meta property="og:image" content="./assets/online_muri-img.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Abhinav-6/Frontend-Practice/main/Online%20Muri/assets/online_muri-img.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Online Muri">
     <meta property="twitter:description" content="Everyone loves muri. Starting from a doctor, engineer, teacher, businessman, entrepreneur, daily wage workers, musician, farmer, builder, reporter, soldier and many more">
-    <meta property="twitter:image" content="./assets/online_muri-img.png">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/Abhinav-6/Frontend-Practice/main/Online%20Muri/assets/online_muri-img.png">
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
 </head>
